welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:5: error: ')' expected but '<-' found.
if((m)<-99) {
      ^icyHot:10: error: illegal start of simple expression
}
^